--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -20,4 +20,4 @@ jobs:
 # Run Unit tests- Specify unit tests here
 
 # sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name github_sam_integration --s3-bucket cohara-prod-dl-bucket --capabilities CAPABILITY_IAM --region us-east-1
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name github-aws-sam --s3-bucket cohara-prod-dl-bucket --capabilities CAPABILITY_IAM --region us-east-1
