--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -3,8 +3,11 @@ on:
     branches:
       - main
 jobs:
-  build-deploy:
+  demo-api-deploy:
     runs-on: ubuntu-latest
+    env:
+      NAME: github-aws-sam-demo-api
+      BUCKET: cohara-prod-dl-bucket
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -16,8 +19,5 @@ jobs:
           aws-region: us-east-1
       # sam build
       - run: sam build --use-container
-
-# Run Unit tests- Specify unit tests here
-
-# sam deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name github-aws-sam --s3-bucket cohara-prod-dl-bucket --capabilities CAPABILITY_IAM --region us-east-1
+      # sam deploy
+      - run: sam deploy --template demo_api/template.yaml --no-confirm-changeset --no-fail-on-empty-changeset --stack-name ${{ env.NAME }} --s3-bucket ${{ env.BUCKET }} --s3-prefix ${{ env.NAME }}/ --capabilities CAPABILITY_IAM --region us-east-1
