--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -18,6 +18,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       # sam build
-      - run: sam build --use-container
+      - run: sam build --use-container --template demo_api/template.yaml
       # sam deploy
       - run: sam deploy --template demo_api/template.yaml --no-confirm-changeset --no-fail-on-empty-changeset --stack-name ${{ env.NAME }} --s3-bucket ${{ env.BUCKET }} --s3-prefix ${{ env.NAME }}/ --capabilities CAPABILITY_IAM --region us-east-1
